tests/errors/lex_err03.kt
// unsigned literal error
123u